--- a/styles/sass/_animation.scss
+++ b/styles/sass/_animation.scss
@@ -3,11 +3,15 @@
     height: 100vh;
     width: 100vw;
     z-index: 1;
-    .container {
+    .emojiContainer {
         position: absolute;
-        width: 30px;
-        height: 30px;
-        top: calc(50% - 15px);
-        left: calc(50% - 15px);
+        font-size: 30px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 50px;
+        height: 50px;
+        top: calc(50%);
+        left: calc(50% - 25px);
     }
 }
