--- a/styles/sass/_animation.scss
+++ b/styles/sass/_animation.scss
@@ -2,7 +2,7 @@
     position: absolute;
     height: 100vh;
     width: 100vw;
-    z-index: 1;
+    overflow: hidden;
     .emojiContainer {
         position: absolute;
         font-size: 30px;
@@ -12,6 +12,6 @@
         width: 50px;
         height: 50px;
         top: calc(50%);
-        left: calc(50% - 25px);
+        left: calc(50% - 50px);
     }
 }
