--- a/styles/style.css
+++ b/styles/style.css
@@ -288,6 +288,26 @@ body {
       -ms-flex-pack: justify;
           justify-content: space-between;
   height: 100vh;
+  overflow: hidden;
+}
+
+header {
+  padding: 0 25px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row nowrap;
+          flex-flow: row nowrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+header a {
+  -webkit-transform: translateY(15px);
+          transform: translateY(15px);
 }
 
 main {
@@ -307,7 +327,7 @@ main {
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
-  padding-top: 10vh;
+  padding-top: 5vh;
 }
 
 form {
@@ -319,6 +339,7 @@ form {
   -ms-grid-columns: 50vw auto;
       grid-template-columns: 50vw auto;
   gap: 25px;
+  font-size: 20px;
 }
 
 .display {
@@ -329,14 +350,23 @@ form {
   -webkit-box-direction: normal;
       -ms-flex-flow: row wrap;
           flex-flow: row wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: calc(100vw - 50px);
+}
+
+.display .year {
+  height: 80px;
+  width: 100%;
 }
 
 .display span {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 30vw;
-          flex: 1 30vw;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 25vw;
+          flex: 0 0 25vw;
   text-align: center;
-  font-size: 1000%;
+  font-size: 700%;
 }
 
 .button {
@@ -370,7 +400,7 @@ form {
   position: absolute;
   height: 100vh;
   width: 100vw;
-  z-index: 1;
+  overflow: hidden;
 }
 
 .endingAnimations .emojiContainer {
@@ -388,7 +418,7 @@ form {
   width: 50px;
   height: 50px;
   top: calc(50%);
-  left: calc(50% - 25px);
+  left: calc(50% - 50px);
 }
 
 footer {
