--- a/styles/sass/_body.scss
+++ b/styles/sass/_body.scss
@@ -3,5 +3,6 @@ body {
     flex-flow: column nowrap;
     justify-content: space-between;
     height: 100vh;
+    min-height: 568px;
     overflow: hidden;
 }
