--- a/styles/sass/_footer.scss
+++ b/styles/sass/_footer.scss
@@ -1,9 +1,9 @@
 footer {
     position: relative;
     padding: 10px;
-    background-color: $vintageBlack;
+    background-color: rgb(39, 39, 39);
     p { 
-        color: $offWhite;
+        color: whitesmoke;
         text-align: center; 
     }
 }
