--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -3,7 +3,8 @@
 @import 'typography';
 @import 'body';
 @import 'header';
-@import 'main';
 @import 'animation';
+@import 'calendar';
+@import 'main';
 @import 'settings';
 @import 'footer';
