--- a/styles/sass/_animation.scss
+++ b/styles/sass/_animation.scss
@@ -1,17 +1,17 @@
 .endingAnimations {
     position: absolute;
-    height: 100vh;
+    top: 0;
+    left: 0;
     width: 100vw;
+    height: 100vh;
     overflow: hidden;
-    .emojiContainer {
-        position: absolute;
-        font-size: 30px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 50px;
-        height: 50px;
-        top: calc(50%);
-        left: calc(50% - 50px);
-    }
+    z-index: -1;
+}
+
+.emojiContainer {
+    position: absolute;
+    font-size: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
