--- a/styles/sass/_main.scss
+++ b/styles/sass/_main.scss
@@ -4,6 +4,7 @@ main {
     flex-flow: column nowrap;
     align-items: center;
     justify-content: space-evenly;
+    overflow: hidden;
 }
 
 form {
@@ -15,10 +16,11 @@ form {
     input {
         border: none;
         border-bottom: 2px solid;
+        background-color: rgba(255, 255, 255, 0);
     }
 }
 
-.calendar {
+.calendarIcon {
     width: 70px;
     height: 70px;
     border: 5px solid #EF767A;
@@ -27,7 +29,9 @@ form {
     grid-template-columns: 30px 30px;
     align-content: space-evenly;
     justify-content: center;
-    h3 { text-align: center; }
+    h3 { 
+        text-align: center; 
+    }
     div {
         justify-self: center;
         width: 20px;
