--- a/styles/sass/_calendar.scss
+++ b/styles/sass/_calendar.scss
@@ -16,6 +16,8 @@
     background-color: rgb(44, 172, 12);
     padding: 10px 0;
     border-radius: 5px;
+    width: calc(100vw - 30px);
+    margin: 2px;
     h3 {
         text-align: center;
         color: rgb(39, 39, 39);
@@ -45,7 +47,7 @@
     border-radius: 5px;
     margin: 2px;
     display: grid;
-    grid-template-columns: repeat(7, calc((100vw - 50px)/7));
+    grid-template-columns: repeat(7, calc(100%/7));
     background-color: #3a3a3a;
     h3 {
         text-align: center;
@@ -58,14 +60,14 @@
         padding: 0;
         width: calc(100vw - 50px);
         display: grid;
-        grid-template-columns: repeat(7, calc((100vw - 50px)/7));
+        grid-template-columns: repeat(7, calc(100%/7));
         grid-template-rows: repeat(6, 30px);
         text-align: center;
         li {
             align-content: center;
             justify-content: center;
             display: grid;
-            grid-template-columns: repeat(2, calc((100vw - 50px)/18));
+            grid-template-columns: repeat(2, 12px);
             color: whitesmoke;
             &:nth-child(n) {
                 border: 1px solid #3a3a3a;
