--- a/styles/style.css
+++ b/styles/style.css
@@ -253,8 +253,12 @@ h1, h2, h3, a, p {
   overflow: hidden;
 }
 
-*:before {
-  font-size: 2rem;
+* {
+  color: #272727;
+}
+
+*:before, *:after {
+  font-size: 3rem;
   font-weight: 700;
   text-transform: uppercase;
 }
@@ -286,14 +290,13 @@ form {
 h1 {
   font-family: 'Goldman', cursive;
   font-size: 4.9rem;
-  color: #272727;
 }
 
 h2 {
   font-size: 4rem;
 }
 
-h3 {
+h3, input {
   font-family: 'Goldman', cursive;
   font-size: 2rem;
   font-weight: 700;
@@ -302,11 +305,6 @@ h3 {
 .fa-chevron-left:before,
 .fa-chevron-right:before {
   font-size: 1.6rem;
-}
-
-*:before, *:after {
-  font-weight: 700;
-  font-size: 3rem;
 }
 
 footer {
@@ -326,7 +324,6 @@ body {
       -ms-flex-pack: justify;
           justify-content: space-between;
   height: 100vh;
-  min-height: 568px;
   overflow: hidden;
 }
 
@@ -403,6 +400,8 @@ header .fa-cogs {
   background-color: #2cac0c;
   padding: 10px 0;
   border-radius: 5px;
+  width: calc(100vw - 30px);
+  margin: 2px;
 }
 
 .instruction h3 {
@@ -441,8 +440,8 @@ header .fa-cogs {
   margin: 2px;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (calc((100vw - 50px)/7))[7];
-      grid-template-columns: repeat(7, calc((100vw - 50px)/7));
+  -ms-grid-columns: (calc(100%/7))[7];
+      grid-template-columns: repeat(7, calc(100%/7));
   background-color: #3a3a3a;
 }
 
@@ -459,8 +458,8 @@ header .fa-cogs {
   width: calc(100vw - 50px);
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (calc((100vw - 50px)/7))[7];
-      grid-template-columns: repeat(7, calc((100vw - 50px)/7));
+  -ms-grid-columns: (calc(100%/7))[7];
+      grid-template-columns: repeat(7, calc(100%/7));
   -ms-grid-rows: (30px)[6];
       grid-template-rows: repeat(6, 30px);
   text-align: center;
@@ -474,8 +473,8 @@ header .fa-cogs {
           justify-content: center;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (calc((100vw - 50px)/18))[2];
-      grid-template-columns: repeat(2, calc((100vw - 50px)/18));
+  -ms-grid-columns: (12px)[2];
+      grid-template-columns: repeat(2, 12px);
   color: whitesmoke;
 }
 
@@ -509,8 +508,8 @@ form {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -ms-grid-columns: 50vw calc(50vw - 60px);
-      grid-template-columns: 50vw calc(50vw - 60px);
+  -ms-grid-columns: 50vw 1fr;
+      grid-template-columns: 50vw 1fr;
   -webkit-column-gap: 10px;
           column-gap: 10px;
   row-gap: 25px;
@@ -551,13 +550,17 @@ form input {
   background-color: #EF767A;
 }
 
+.calendarIcon .displayText {
+  text-transform: uppercase;
+}
+
 .display {
   text-align: center;
   width: calc(100vw - 50px);
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (calc((100vw - 50px)/8))[8];
-      grid-template-columns: repeat(8, calc((100vw - 50px)/8));
+  -ms-grid-columns: (calc(100%/8))[8];
+      grid-template-columns: repeat(8, calc(100%/8));
       grid-template-areas: 'year1 year2 year3     yearColon day1    day2        day3     dayColon' 'hour1 hour2 hourColon minute1   minute2 minuteColon second1  second2';
 }
 
@@ -695,4 +698,190 @@ footer {
 footer p {
   color: whitesmoke;
   text-align: center;
+}
+
+@media (max-height: 568px) {
+  main {
+    display: -ms-grid;
+    display: grid;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-flex-line-pack: distribute;
+        align-content: space-around;
+        grid-template-areas: 'form form' 'calendarIcon button';
+  }
+  form,
+  .display {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-area: form;
+  }
+  .calendarIcon {
+    margin: 0 auto;
+    -ms-grid-row: 2;
+    -ms-grid-column: 1;
+    grid-area: calendarIcon;
+  }
+  .button {
+    margin: 0 auto;
+    -ms-grid-row: 2;
+    -ms-grid-column: 2;
+    grid-area: button;
+  }
+  .calendar {
+    left: 25vw;
+  }
+  .calendar,
+  .instruction,
+  .calendarNav {
+    width: 50vw;
+  }
+  .calendarDisplay {
+    width: 50vw;
+  }
+  .calendarDisplay ul {
+    width: calc(50vw - 20px);
+  }
+  .display {
+    width: 70vw;
+  }
+}
+
+@media (max-height: 450px) {
+  h3, label {
+    font-size: 16px;
+  }
+  header .fa-cogs {
+    margin-top: 15px;
+  }
+  main {
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    -ms-flex-line-pack: space-evenly;
+        align-content: space-evenly;
+    -ms-grid-rows: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        grid-template-areas: 'form calendarIcon' 'form button';
+  }
+  form {
+    width: 70vw;
+    -ms-grid-columns: 15vw 1fr 15vw 1fr;
+        grid-template-columns: 15vw 1fr 15vw 1fr;
+  }
+  .button {
+    width: 80px;
+    height: 80px;
+  }
+  .calendar {
+    top: calc((100vh - 275px) / 2);
+  }
+  .instruction {
+    position: absolute;
+    top: 107px;
+    left: -170px;
+    -webkit-transform: rotate(270deg);
+            transform: rotate(270deg);
+    width: 270px;
+  }
+  .display span {
+    font-size: 80px;
+  }
+}
+
+@media (min-width: 768px) {
+  h3, label, input {
+    font-size: 3rem;
+  }
+  header {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    height: 100px;
+  }
+  header h1 {
+    font-size: 7rem;
+  }
+  header .fa-cogs:before {
+    font-size: 5.5rem;
+  }
+  main {
+    display: -ms-grid;
+    display: grid;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-flex-line-pack: space-evenly;
+        align-content: space-evenly;
+        grid-template-areas: 'form form' 'calendarIcon button';
+  }
+  form {
+    -webkit-column-gap: 25px;
+            column-gap: 25px;
+  }
+  .display {
+    width: 542px;
+  }
+  form,
+  .display {
+    height: 300px;
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-area: form;
+  }
+  .calendarIcon {
+    margin: 0 auto;
+    -ms-grid-row: 2;
+    -ms-grid-column: 1;
+    grid-area: calendarIcon;
+    width: 180px;
+    height: 180px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-flow: column-reverse nowrap;
+            flex-flow: column-reverse nowrap;
+  }
+  .calendarIcon h3:nth-child(1) {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-flex: 1;
+        -ms-flex: 1 0 0px;
+            flex: 1 0 0;
+    background-color: #EF767A;
+    font-size: 10rem;
+    color: whitesmoke;
+  }
+  .calendarIcon div {
+    display: none;
+  }
+  .button {
+    margin: 0 auto;
+    -ms-grid-row: 2;
+    -ms-grid-column: 2;
+    grid-area: button;
+    width: 200px;
+    height: 200px;
+  }
+  footer {
+    font-size: 3rem;
+  }
+  .calendar {
+    font-family: 'Goldman', cursive;
+  }
 }
