--- a/styles/sass/_main.scss
+++ b/styles/sass/_main.scss
@@ -23,22 +23,23 @@ form {
 }
 
 .calendarIcon {
-    width: 70px;
-    height: 70px;
+    width: 100px;
+    height: 100px;
     border: 5px solid #EF767A;
     border-radius: 5px;
     display: grid;
-    grid-template-columns: 30px 30px;
+    grid-template-columns: 40px 40px;
     align-content: space-evenly;
     justify-content: center;
     h3 { 
         text-align: center; 
         color: rgb(39,39,39);
+        font-size: 2.5rem;
     }
     div {
         justify-self: center;
-        width: 20px;
-        height: 20px;
+        width: 30px;
+        height: 30px;
         border-radius: 2px;
         background-color: #EF767A;
     }
