updated calendar functionality

--- a/styles/sass/_calendar.scss
+++ b/styles/sass/_calendar.scss
@@ -72,6 +72,9 @@
             &:nth-child(n) {
                 border: 1px solid #3a3a3a;
             }
+            .chosenDate {
+                color: rgb(44, 172, 12);
+            }
         }
     }
 }
